--- a/src/app/components/porudzbina/porudzbina.component.html
+++ b/src/app/components/porudzbina/porudzbina.component.html
@@ -3,7 +3,10 @@
 </mat-toolbar>
 
 <div class="container mat-elevation-z8">
-    <mat-table #table [dataSource]="dataSource" class="mat-cell" matSort>
+    <mat-form-field>
+        <input matInput placeholder="Pretraga artikala" (keyup)="applyFilter($event.target.value)">
+    </mat-form-field>
+    <mat-table #table matSort [dataSource]="dataSource" class="mat-cell" matSort>
         <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
             <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
@@ -45,11 +48,15 @@
             </mat-header-cell>
 
             <mat-cell *matCellDef="let row; let i = index">
-                <button (click)="openDialog(2, row.id, row.datum, row.isporuceno, row.iznos, row.placeno, row.dobavljac)" mat-icon-button color="primary">
+                <button
+                    (click)="openDialog(2, row.id, row.datum, row.isporuceno, row.iznos, row.placeno, row.dobavljac)"
+                    mat-icon-button color="primary">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
 
-                <button (click)="openDialog(3, row.id, row.datum, row.isporuceno, row.iznos, row.placeno, row.dobavljac)" mat-icon-button color="primary">
+                <button
+                    (click)="openDialog(3, row.id, row.datum, row.isporuceno, row.iznos, row.placeno, row.dobavljac)"
+                    mat-icon-button color="primary">
                     <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
             </mat-cell>
@@ -59,4 +66,11 @@
         <mat-row style="cursor: pointer" *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)">
         </mat-row>
     </mat-table>
+    <mat-paginator [length] = "100" [pageSize]="5" [pageSizeOptions]="[5,10,25,100]"> 
+    </mat-paginator>
+</div>
+
+<div class="container mat-elevation-z8">
+    <app-stavka-porudzbine *ngIf="selektovanaPorudzbina" [selektovanaPorudzbina]="selektovanaPorudzbina">
+    </app-stavka-porudzbine>
 </div>
